--- a/BikeShop/services.htm
+++ b/BikeShop/services.htm
@@ -6,28 +6,31 @@
         Name: Dakota Elam
         School: Southern Illinois University
         Date Developed: 9/18/2019
-        Tested: 9/18/2019
+        Tested/Update: 9/29/2019
     -->
     <head>
-            <title>Services</title>
+        <title>Services</title>
 
-            <meta charset="utf-8">
-            <meta name="description" content="A bike shop that offer's a wide variety of bikes from many well-known brands.">
-            <meta name="keywords" content="Elam, Bicycles, Bikes, Harrisburg, Illinois">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="./favicon.ico">
 
-            <!-- External Stylesheets -->
-            <link rel="stylesheet" href="./css/styles.css">
-            <link rel="stylesheet" href="./css/slicknav.css">
+        <meta charset="utf-8">
+        <meta name="description" content="A bike shop that offer's a wide variety of bikes from many well-known brands.">
+        <meta name="keywords" content="Elam, Bicycles, Bikes, Harrisburg, Illinois">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-            <!-- Slicknav Plugin Scripts -->
-            <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-            <script src="./js/jquery.slicknav.min.js"></script>
-            <script type="text/javascript">
-                $(document) .ready(function(){
-                    $('#nav_menu') .slicknav({prependTo:"#mobile_menu"});
-                });
-            </script>
+        <!-- External Stylesheets -->
+        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/slicknav.css">
+
+        <!-- Slicknav Plugin Scripts -->
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="./js/jquery.slicknav.min.js"></script>
+        <script type="text/javascript">
+            $(document) .ready(function(){
+                $('#nav_menu') .slicknav({prependTo:"#mobile_menu"});
+            });
+        </script>
     </head>
     <body>
         <nav id="mobile_menu"></nav>
