Added Services Page

--- a/BikeShop/index.htm
+++ b/BikeShop/index.htm
@@ -6,7 +6,10 @@
         Name: Dakota Elam
         School: Southern Illinois University
         Date Developed: 9/15/2019
-        Tested/Update: 9/29/2019
+        Tested/Update: 10/20/2019
+
+        Changelog:
+            -Correct image rollover effect. References to #TrekFuel are now .Rollover and .RolloverOverlay.
     -->
     <head>
         <title>Elam's bicycles</title>
@@ -67,7 +70,12 @@
                 <li>Trek Fuel EX 9.8</li>
             </ul>
                     <figure>
-                        <p id="TrekFuel"></p>
+                        <div class="Rollover">
+                            <img src="./images/trekFuelEXOrange.jpg" alt="Orange Trek Fuel Bike">
+                            <div class="RolloverOverlay">
+                                <div class="RolloverImage"><img src="./images/trekFuelEXBlack.jpg" alt="Black Trek Fuel Bike"></div>
+                            </div>
+                        </div>
                         <figcaption>Trek Fuel EX 9.8 Bike.</figcaption>
                     </figure>
             <ul>
