--- a/MidwayCinemas/Elam_Basic_Web_Page.htm
+++ b/MidwayCinemas/Elam_Basic_Web_Page.htm
@@ -33,20 +33,18 @@
         </script>
     </head>
 <body>
-    <!-- Logo -->
-    <img src="./images/logo.png" alt="Midway Cinemas Logo" class="logo">
     
     <div class="contentBackingHeader">
         <div class="contentWrapHeader">
-            <h1 class="businessName">Midway Cinemas</h1>  
+            <!-- Logo        -->    
             <!-- SlickNav    -->
             <nav id="mobile_menu"></nav>
             <nav id="nav_menu">
                 <ul>
                     <li><a href="index.htm" class="current">Home</a></li>
-                    <li><a href="movies.htm">Movies</a></li>
-                    <li><a href="pricing.htm" >Pricing</a></li>
-                    <li><a href="contact">Contact</a></li>
+                    <li><a href="movies.htm">Rental</a></li>
+                    <li><a href="pricing.htm" >Sales</a></li>
+                    <li><a href="contact">Services</a></li>
                 </ul>
             </nav>
         </div>
@@ -57,12 +55,6 @@
              on the webpage to allow for more control via CSS. -->
         <div class="contentWrap">
 
-            <!-- Description -->
-            <h2>Midway Cinemas</h2>
-            <p>Midway Cinemas is a franchise devoted to providing the lowest prices with the highest end equipment to bring the best movie watching experience possible to as many cities as possible.</p>
-
-            <p>We are among the first of the theatre franchises to receive movies the soonest from publishers to ensure that you will be able to watch your most highly anticipated movie sooner.</p>
-
         </div>
     </div>
     
@@ -70,4 +62,5 @@
     <div class="footer">
     </div>
 </body>
+</html>
 </html>
