--- a/MidwayCinemas/movies.htm
+++ b/MidwayCinemas/movies.htm
@@ -45,8 +45,8 @@
                 <ul>
                     <li><a href="index.htm">Home</a></li>
                     <li><a href="movies.htm" class="current">Movies</a></li>
-                    <li><a href="pricing.htm" >Sales</a></li>
-                    <li><a href="contact">Services</a></li>
+                    <li><a href="pricing.htm" >Pricing</a></li>
+                    <li><a href="contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
