--- a/MidwayCinemas/index.htm
+++ b/MidwayCinemas/index.htm
@@ -46,7 +46,7 @@
                     <li><a href="index.htm" class="current">Home</a></li>
                     <li><a href="movies.htm">Movies</a></li>
                     <li><a href="pricing.htm" >Pricing</a></li>
-                    <li><a href="contact">Contact</a></li>
+                    <li><a href="contact.htm">Contact</a></li>
                 </ul>
             </nav>
         </div>
