--- a/MidwayCinemas/movies.htm
+++ b/MidwayCinemas/movies.htm
@@ -64,15 +64,21 @@
             <div class="imageGrid">
                 <div class="row">
                     <div class="column">
-                        <img src="./images/movies/Joker.jpg" alt="Joker Movie">                    
+                        <a href="./movies/joker.htm">
+                            <img src="./images/movies/Joker.jpg" alt="Joker Movie">
+                        </a>                   
                     </div>
 
                     <div class="column">
-                        <img src="./images/movies/Jumanji.jpg" alt="Jumanji: The Next Level">
+                        <a href="./movies/jumanji.htm">
+                            <img src="./images/movies/Jumanji.jpg" alt="Jumanji: The Next Level">
+                        </a>
                     </div>
 
                     <div class="column">
-                        <img src="./images/movies/toyStory4.jpg" alt="Toy Story 4">
+                        <a href="./movies/toyStory4.htm">
+                            <img src="./images/movies/toyStory4.jpg" alt="Toy Story 4">
+                        </a>
                     </div>
                 </div>
             </div>
