--- a/MidwayCinemas/index.htm
+++ b/MidwayCinemas/index.htm
@@ -68,6 +68,7 @@
     
     <!-- Footer      -->
     <div class="footer">
+        <p>&copy; Dakota Elam <a href="https://www.siu.edu" target="_blank">Southern Illinois University</a></p>
     </div>
 </body>
 </html>
