--- a/MidwayCinemas/movies.htm
+++ b/MidwayCinemas/movies.htm
@@ -85,9 +85,9 @@
         </div>
     </div>
     
-    <!-- Footer -->
+    <!-- Footer      -->
     <div class="footer">
+        <p>&copy; Dakota Elam <a href="https://www.siu.edu" target="_blank">Southern Illinois University</a></p>
     </div>
 </body>
-</html>
 </html>
