--- a/MidwayCinemas/contact.htm
+++ b/MidwayCinemas/contact.htm
@@ -43,10 +43,10 @@
             <nav id="mobile_menu"></nav>
             <nav id="nav_menu">
                 <ul>
-                    <li><a href="index.htm" class="current">Home</a></li>
+                    <li><a href="index.htm">Home</a></li>
                     <li><a href="movies.htm">Movies</a></li>
                     <li><a href="pricing.htm" >Pricing</a></li>
-                    <li><a href="contact.htm">Contact</a></li>
+                    <li><a href="contact.htm" class="current">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -60,7 +60,7 @@
             
             <form name="contact_form" action="response.htm" method="post">
                 <label for="fullName">Full Name:</label>
-                <input type="text" name="Name" id="fullName" placeholder="Ex. John Smith" required autofocus minlength="15" maxlength="25" title="Name must be between 15 and 25 characters."><br>
+                <input type="text" name="Name" id="fullName" placeholder="Ex. John Smith" required autofocus minlength="3" maxlength="25" title="Name must be between 15 and 25 characters."><br>
 
                 <label for="address">Theatre's Address:</label> 
                 <input type="text" name="Address" id="address" placeholder="Ex. 123 West Main Street" required minlength="15" maxlength="50" title="Must be between 15 and 50 characters."><br>
