--- a/MidwayCinemas/movies/joker.htm
+++ b/MidwayCinemas/movies/joker.htm
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <!--
-        Title:Midway Cinemas
+        Title:Midway Cinemas Joker Movie Page
                 Basic Web Applications
         Name: Dakota Elam
         School: Southern Illinois University
-        Date Developed: 11/8/2019
-        Tested/Update: N/A
+        Date Developed: 12/4/2019
+        Tested/Update: 12/8/2019
     -->
     <head>
         <title>Midway Cinemas</title>
@@ -36,6 +36,7 @@
     <!-- Logo -->
     <img src="../images/logo.png" alt="Midway Cinemas Logo" class="logo">
     
+    <!-- Webpage Navbar -->
     <div class="contentBackingHeader">
         <div class="contentWrapHeader">
             <h1 class="businessName">Midway Cinemas</h1>  
@@ -52,8 +53,9 @@
         </div>
     </div>
     
+    <!-- Webpage Content -->
     <div class="contentBacking">
-        <!-- Content Wrapper will around the content such as words and pictures
+        <!-- Content Wrapper will wrap around the content such as words and pictures
              on the webpage to allow for more control via CSS. -->
         <div class="contentWrap">
 
