--- a/Elam405PHP/index.htm
+++ b/Elam405PHP/index.htm
@@ -1,8 +1,4 @@
-<?php
-    // get the data from the request
-    $first_name = $_GET['first_name'];
-    $last_name = $_GET['last_name'];
-?>
+
 <!DOCTYPE html>
 <html lang="en-US">
     <!-- Basic web page template -->
@@ -12,7 +8,6 @@
     </head>
     <body>
         <h1>Temporary index file.</h1>
-        <p>First name: <?php echo $first_name; ?></p>
-        <p>Last name: <?php echo $last_name; ?></p>
+        <a href='phptest.php'><p>Module 2: php test</p></a>
     </body>
 </html>
